// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: OptionGroup default snapshot 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-24 {
  background-color: #ffffff;
  border-radius: 3px;
  position: relative;
  width: inherit;
  z-index: 9;
  max-height: 316px;
  min-width: 100px;
  overflow-y: auto;
  padding: 10px 1px;
}

.emotion-1 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  outline: none;
  padding: 10px 0;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 400;
  color: #101721;
  font-size: 14px;
  font-weight: 400;
  color: #101721;
  font-size: 14px;
  cursor: pointer;
  padding: 12px 18px;
  position: relative;
  line-height: 28px;
  z-index: 999;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-content: initial;
  -ms-flex-line-pack: initial;
  align-content: initial;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1[data-disabled='true'] {
  cursor: not-allowed;
}

.emotion-1[data-disabled='true'] .css-qatnln {
  color: #E0E0E0;
}

.emotion-1:last-of-type {
  border: 0;
}

.emotion-1:hover {
  background-color: #F7F7F9;
}

<div
  className="emotion-24"
  data-test-id="optiongroup"
  role="radiogroup"
  style={
    Object {
      "paddingTop": undefined,
    }
  }
>
  <div
    aria-checked={false}
    className="emotion-1"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="emotion-0"
    >
      Option 0
    </div>
    <canvas
      height={0}
      onDragOver={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "borderRadius": "inherit",
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
      width={0}
    />
  </div>
  <div
    aria-checked={false}
    className="emotion-1"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="emotion-0"
    >
      Option 1
    </div>
    <canvas
      height={0}
      onDragOver={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "borderRadius": "inherit",
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
      width={0}
    />
  </div>
  <div
    aria-checked={false}
    className="emotion-1"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="emotion-0"
    >
      Option 2
    </div>
    <canvas
      height={0}
      onDragOver={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "borderRadius": "inherit",
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
      width={0}
    />
  </div>
  <div
    aria-checked={false}
    className="emotion-1"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="emotion-0"
    >
      Option 3
    </div>
    <canvas
      height={0}
      onDragOver={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "borderRadius": "inherit",
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
      width={0}
    />
  </div>
  <div
    aria-checked={false}
    className="emotion-1"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="emotion-0"
    >
      Option 4
    </div>
    <canvas
      height={0}
      onDragOver={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "borderRadius": "inherit",
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
      width={0}
    />
  </div>
  <div
    aria-checked={false}
    className="emotion-1"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="emotion-0"
    >
      Option 5
    </div>
    <canvas
      height={0}
      onDragOver={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "borderRadius": "inherit",
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
      width={0}
    />
  </div>
  <div
    aria-checked={false}
    className="emotion-1"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="emotion-0"
    >
      Option 6
    </div>
    <canvas
      height={0}
      onDragOver={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "borderRadius": "inherit",
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
      width={0}
    />
  </div>
  <div
    aria-checked={false}
    className="emotion-1"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="emotion-0"
    >
      Option 7
    </div>
    <canvas
      height={0}
      onDragOver={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "borderRadius": "inherit",
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
      width={0}
    />
  </div>
  <div
    aria-checked={false}
    className="emotion-1"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="emotion-0"
    >
      Option 8
    </div>
    <canvas
      height={0}
      onDragOver={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "borderRadius": "inherit",
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
      width={0}
    />
  </div>
  <div
    aria-checked={false}
    className="emotion-1"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="emotion-0"
    >
      Option 9
    </div>
    <canvas
      height={0}
      onDragOver={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "borderRadius": "inherit",
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
      width={0}
    />
  </div>
  <div
    aria-checked={false}
    className="emotion-1"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="emotion-0"
    >
      Option 10
    </div>
    <canvas
      height={0}
      onDragOver={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "borderRadius": "inherit",
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
      width={0}
    />
  </div>
  <div
    aria-checked={false}
    className="emotion-1"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="emotion-0"
    >
      Option 11
    </div>
    <canvas
      height={0}
      onDragOver={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "borderRadius": "inherit",
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
      width={0}
    />
  </div>
</div>
`;

exports[`Component: OptionGroup multi option group 1`] = `
Array [
  .emotion-2 {
  min-width: 200px;
  border-radius: 3px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
}

.emotion-2 > i {
  margin-right: 10px;
  font-size: 12px;
}

.emotion-2.__pebble__search__small {
  background-color: #F7F7F9;
}

.emotion-2.__pebble__search__large {
  background-color: #ffffff;
  height: 76px;
  padding: 0 25px;
  box-shadow: 0 2px 7px 0 #F2F2F2;
}

.emotion-2.__pebble__search__table {
  border: 1px solid #E0E0E0;
  background-color: #ffffff;
}

.emotion-2.__pebble__search__table i {
  color: #6B7785;
}

.emotion-0 {
  border-radius: 3px;
  outline: none;
  border: 0;
  height: inherit;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-weight: 400;
  color: #101721;
  font-size: 12px;
  background-color: transparent;
}

.emotion-0::-webkit-input-placeholder {
  color: #9FA6B0;
}

.emotion-0::-moz-placeholder {
  color: #9FA6B0;
}

.emotion-0:-ms-input-placeholder {
  color: #9FA6B0;
}

.emotion-0:-moz-placeholder {
  color: #9FA6B0;
}

.emotion-0::-webkit-input-placeholder {
  color: #9FA6B0;
}

.emotion-0::-moz-placeholder {
  color: #9FA6B0;
}

.emotion-0:-ms-input-placeholder {
  color: #9FA6B0;
}

.emotion-0::placeholder {
  color: #9FA6B0;
}

.emotion-1 {
  display: table;
  height: 16px;
  width: 16px;
  background-color: #E0E0E0;
  font-size: 6px;
  border-radius: 16px;
  text-align: center;
  cursor: pointer;
  pointer-events: none;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  opacity: 0;
}

.emotion-1.__display {
  opacity: 1;
  pointer-events: unset;
}

.emotion-3 {
  padding: 20px;
  box-shadow: none;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  z-index: 10;
  will-change: padding;
  position: absolute;
  top: 0;
  background: white;
  width: 100%;
  box-sizing: border-box;
}

<div
    className="emotion-3"
  >
    <div
      className="emotion-2 __pebble__search__small"
    >
      <i
        className="pi pi-search"
      />
      <input
        aria-label="Search"
        autoFocus={true}
        className="emotion-0"
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Search"
        type="text"
        value=""
      />
      <div
        className="emotion-1"
        onClick={[Function]}
      >
        <i
          className="pi pi-close"
          style={
            Object {
              "display": "table-cell",
              "verticalAlign": "middle",
            }
          }
        />
      </div>
    </div>
  </div>,
  .emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-36 {
  background-color: #ffffff;
  border-radius: 3px;
  position: relative;
  width: inherit;
  z-index: 9;
  max-height: 316px;
  min-width: 100px;
  overflow-y: auto;
  padding: 10px 1px;
}

.emotion-2 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  outline: none;
  padding: 10px 0;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 400;
  color: #101721;
  font-size: 14px;
  font-weight: 400;
  color: #101721;
  font-size: 14px;
  cursor: pointer;
  padding: 12px 18px;
  position: relative;
  line-height: 28px;
  z-index: 999;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-content: initial;
  -ms-flex-line-pack: initial;
  align-content: initial;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2[data-disabled='true'] {
  cursor: not-allowed;
}

.emotion-2[data-disabled='true'] .css-qatnln {
  color: #E0E0E0;
}

.emotion-2:last-of-type {
  border: 0;
}

.emotion-2:hover {
  background-color: #F7F7F9;
}

.emotion-1 {
  margin-left: 10px;
  color: #E0E0E0;
  font-size: 20px;
}

<div
    className="emotion-36"
    data-test-id="optiongroup"
    role="group"
    style={
      Object {
        "paddingTop": 80,
      }
    }
  >
    <div
      aria-checked={false}
      className="emotion-2"
      onClick={[Function]}
      role="checkbox"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
      >
        Option 0
      </div>
      <i
        className="pi pi-checkbox-unselected emotion-1"
      />
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
    <div
      aria-checked={false}
      className="emotion-2"
      onClick={[Function]}
      role="checkbox"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
      >
        Option 1
      </div>
      <i
        className="pi pi-checkbox-unselected emotion-1"
      />
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
    <div
      aria-checked={false}
      className="emotion-2"
      onClick={[Function]}
      role="checkbox"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
      >
        Option 2
      </div>
      <i
        className="pi pi-checkbox-unselected emotion-1"
      />
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
    <div
      aria-checked={false}
      className="emotion-2"
      onClick={[Function]}
      role="checkbox"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
      >
        Option 3
      </div>
      <i
        className="pi pi-checkbox-unselected emotion-1"
      />
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
    <div
      aria-checked={false}
      className="emotion-2"
      onClick={[Function]}
      role="checkbox"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
      >
        Option 4
      </div>
      <i
        className="pi pi-checkbox-unselected emotion-1"
      />
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
    <div
      aria-checked={false}
      className="emotion-2"
      onClick={[Function]}
      role="checkbox"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
      >
        Option 5
      </div>
      <i
        className="pi pi-checkbox-unselected emotion-1"
      />
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
    <div
      aria-checked={false}
      className="emotion-2"
      onClick={[Function]}
      role="checkbox"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
      >
        Option 6
      </div>
      <i
        className="pi pi-checkbox-unselected emotion-1"
      />
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
    <div
      aria-checked={false}
      className="emotion-2"
      onClick={[Function]}
      role="checkbox"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
      >
        Option 7
      </div>
      <i
        className="pi pi-checkbox-unselected emotion-1"
      />
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
    <div
      aria-checked={false}
      className="emotion-2"
      onClick={[Function]}
      role="checkbox"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
      >
        Option 8
      </div>
      <i
        className="pi pi-checkbox-unselected emotion-1"
      />
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
    <div
      aria-checked={false}
      className="emotion-2"
      onClick={[Function]}
      role="checkbox"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
      >
        Option 9
      </div>
      <i
        className="pi pi-checkbox-unselected emotion-1"
      />
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
    <div
      aria-checked={false}
      className="emotion-2"
      onClick={[Function]}
      role="checkbox"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
      >
        Option 10
      </div>
      <i
        className="pi pi-checkbox-unselected emotion-1"
      />
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
    <div
      aria-checked={false}
      className="emotion-2"
      onClick={[Function]}
      role="checkbox"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
      >
        Option 11
      </div>
      <i
        className="pi pi-checkbox-unselected emotion-1"
      />
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
  </div>,
]
`;

exports[`Component: OptionGroup with searchbox 1`] = `
Array [
  .emotion-2 {
  min-width: 200px;
  border-radius: 3px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
}

.emotion-2 > i {
  margin-right: 10px;
  font-size: 12px;
}

.emotion-2.__pebble__search__small {
  background-color: #F7F7F9;
}

.emotion-2.__pebble__search__large {
  background-color: #ffffff;
  height: 76px;
  padding: 0 25px;
  box-shadow: 0 2px 7px 0 #F2F2F2;
}

.emotion-2.__pebble__search__table {
  border: 1px solid #E0E0E0;
  background-color: #ffffff;
}

.emotion-2.__pebble__search__table i {
  color: #6B7785;
}

.emotion-0 {
  border-radius: 3px;
  outline: none;
  border: 0;
  height: inherit;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-weight: 400;
  color: #101721;
  font-size: 12px;
  background-color: transparent;
}

.emotion-0::-webkit-input-placeholder {
  color: #9FA6B0;
}

.emotion-0::-moz-placeholder {
  color: #9FA6B0;
}

.emotion-0:-ms-input-placeholder {
  color: #9FA6B0;
}

.emotion-0:-moz-placeholder {
  color: #9FA6B0;
}

.emotion-0::-webkit-input-placeholder {
  color: #9FA6B0;
}

.emotion-0::-moz-placeholder {
  color: #9FA6B0;
}

.emotion-0:-ms-input-placeholder {
  color: #9FA6B0;
}

.emotion-0::placeholder {
  color: #9FA6B0;
}

.emotion-1 {
  display: table;
  height: 16px;
  width: 16px;
  background-color: #E0E0E0;
  font-size: 6px;
  border-radius: 16px;
  text-align: center;
  cursor: pointer;
  pointer-events: none;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  opacity: 0;
}

.emotion-1.__display {
  opacity: 1;
  pointer-events: unset;
}

.emotion-3 {
  padding: 20px;
  box-shadow: none;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  z-index: 10;
  will-change: padding;
  position: absolute;
  top: 0;
  background: white;
  width: 100%;
  box-sizing: border-box;
}

<div
    className="emotion-3"
  >
    <div
      className="emotion-2 __pebble__search__small"
    >
      <i
        className="pi pi-search"
      />
      <input
        aria-label="Search"
        autoFocus={true}
        className="emotion-0"
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Search"
        type="text"
        value=""
      />
      <div
        className="emotion-1"
        onClick={[Function]}
      >
        <i
          className="pi pi-close"
          style={
            Object {
              "display": "table-cell",
              "verticalAlign": "middle",
            }
          }
        />
      </div>
    </div>
  </div>,
  .emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-24 {
  background-color: #ffffff;
  border-radius: 3px;
  position: relative;
  width: inherit;
  z-index: 9;
  max-height: 316px;
  min-width: 100px;
  overflow-y: auto;
  padding: 10px 1px;
}

.emotion-1 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  outline: none;
  padding: 10px 0;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 400;
  color: #101721;
  font-size: 14px;
  font-weight: 400;
  color: #101721;
  font-size: 14px;
  cursor: pointer;
  padding: 12px 18px;
  position: relative;
  line-height: 28px;
  z-index: 999;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-content: initial;
  -ms-flex-line-pack: initial;
  align-content: initial;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1[data-disabled='true'] {
  cursor: not-allowed;
}

.emotion-1[data-disabled='true'] .css-qatnln {
  color: #E0E0E0;
}

.emotion-1:last-of-type {
  border: 0;
}

.emotion-1:hover {
  background-color: #F7F7F9;
}

<div
    className="emotion-24"
    data-test-id="optiongroup"
    role="radiogroup"
    style={
      Object {
        "paddingTop": 80,
      }
    }
  >
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="radio"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
      >
        Option 0
      </div>
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="radio"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
      >
        Option 1
      </div>
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="radio"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
      >
        Option 2
      </div>
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="radio"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
      >
        Option 3
      </div>
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="radio"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
      >
        Option 4
      </div>
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="radio"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
      >
        Option 5
      </div>
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="radio"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
      >
        Option 6
      </div>
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="radio"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
      >
        Option 7
      </div>
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="radio"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
      >
        Option 8
      </div>
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="radio"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
      >
        Option 9
      </div>
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="radio"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
      >
        Option 10
      </div>
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="radio"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
      >
        Option 11
      </div>
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
  </div>,
]
`;
